lab1/Test/L1-A-9-60.cmm
int qXOJuHHCxe6hCS2_ 
;
float odCRg61IixIZpfUdXX ( ) {
  struct vaT4K6ZRdAhTACUcdZcN SPOhaJiYWjOxe , TN7GfUD4x 
    [ 857439256 ] = IUK1J9vUF5rmIPj6o ;
  if ( ntXKsb47PW )   HmJkHnAtyPe9vB2yS = TNDQ1vF 
    && IHcPPVl7mkyE_ - Xd_WtKrzp / ! - YYJOF1AfaUPJd [ 
    _wdMDEcL28Mh3Oo3 || Y49KBVj <= MfBk5amnaJKAYyetXsh 
    + ! XR6U_RRR ( WK2jPnUt7qK_me6u , j2ggZou == SUV4trbGbQHZ7xIYBUE 
    * P ( _y || qlitD68I33rIV2VnnTC != VjMFno4Hn74 / ! 
    ( OUWc3OtYAV4c1Ab0GF = RRkXJEkTP8xXx595so7 < ! ! n 
    [ Ux || JF4j <= 106081527.1570530682 ] ) ) >= - - 
    zPvK3eDCzStdFMPL . hpq > dOpwsRdNyOa ( ) ) ] * 678836751 
    ;

}
int ;
int ;
struct {
};
int ;
int ;
int INPbHtqelOzFoUK , ANh43jPi_P4 

;
struct W1Lekk6d65n9gYLf {
};
int DoUM ( int Iyy0ZUtpuOwV6LD4wn ) {
}
int DSU1dYgXkf8bLoqU ( ) {
}
int 
int ugK2boE ( int ekhti4nCqQT , int Fva46ebA77EIeYA 
  ) {
  if ( vrvns5JPQt )   while ( oC5iWK )   if ( x1SlSH5Lcn3okP3m 
    )   b6bkgaz ;
else   aTqDXTdJz4y ;


else {
    return jix ;
  }
}
int yHF7qAS2WGHFnaDd ( ) {
}
int zbNs8vfs7roDMT ( ) }
int ;
int CfONyzG0m ( ) {
}
int ;
int UD1PsJM70kbI_qU ( ) {
}
int ;
int ;
int j6ILXq6s0y ( ) {
}
int ;
int ;
int ;
int ;
int KP4ZM5D4h9S3tiO_ ( ) {
  D8Qj9zVrD5S ;
  HXsrHGFWQCPf ;
  if ( iOxeLA6QBqM8YXp0H7 ) {
    if ( cmL7iFD )     APH3_ZjIftwAJtu6 ;
else     if ( Em0lO )     Jqq708N8uLyRmYyt ;


  }else {
  }
  if ( JwwE3TVSmhzic5 )   LvNwBzhlAvdLDHd0nuvM ;
else   AiQG ;

}
